use a LinkedList to handle the children of a line
Signed-off-by: Florian Thienel <florian@thienel.org>